# wind-utils

./: .dockerignore  .gitignore  .readthedocs.yml  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  changes  doconfig.sh  module_dm.F90  module_exodus.F90  module_ncderrcheck.F90  module_str2int.F90  module_utmdeg_converter.F90  wrftonalu.F90
.github/workflows/: ci.yml
cmake/: FindYAMLCPP.cmake  NaluWindUtils.cmake.in
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile.rtd  intro.md
doc/manual/: CMakeLists.txt  Makefile  make.bat  requirements.txt
doc/manual/source/: conf.py  index.rst
doc/manual/source/dev/: apidocs.rst  index.rst  intro.rst  nalu_preprocessing.rst
doc/manual/source/dev/api/: core.rst  mesh.rst  preprocessing.rst
doc/manual/source/user/: abl_mesh.rst  index.rst  installation.rst  nalu_postprocess.rst  nalu_preprocess.rst  slice_mesh.rst  wrftonalu.rst
doc/manual/source/user/files/: nalu_postprocess.yaml  nalu_preprocess.yaml
doc/manual/source/user/files/tuts/abl_precursor/: abl_refine.yaml  abl_setup.yaml
doc/manual/source/user/tools/: boxturb.rst
doc/manual/source/user/tuts/: abl_precursor.rst  alm_refine.rst  index.rst
examples/: doConfigSpack.sh  doconfig.sh  nalu_preprocess.yaml
gen_planes/: CMakeLists.txt  ZPlanes.cpp  ZPlanes.h  gen_planes.cpp  gen_planes.yaml
ndtw2d/: CMakeLists.txt  NDTW2D.cpp  NDTW2D.h  calc_ndtw2d.cpp  calc_ndtw2d.yaml
src/: CMakeLists.txt  module_constants.F90  module_exodus.F90  module_openfoam_bc.F90  module_utmdeg_converter.F90  wrftonalu.F90
src/core/: CFDMesh.cpp  CFDMesh.h  CMakeLists.txt  ClassRegistry.h  KokkosWrappers.h  LinearInterpolation.h  ParallelIO.h  ParallelInfo.h  PerfUtils.cpp  PerfUtils.h  YamlUtils.h
src/mesh/: CMakeLists.txt  HexBlockBase.cpp  HexBlockBase.h  HexBlockMesh.cpp  HexBlockMesh.h  Plot3DMesh.cpp  Plot3DMesh.h  Slice.cpp  Slice.h  abl_mesh.cpp  slice_mesh.cpp
src/mesh/spacing/: ConstantSpacing.cpp  ConstantSpacing.h  GeometricStretching.cpp  GeometricStretching.h  MeshSpacing.cpp  MeshSpacing.h  UserSpecified.cpp  UserSpecified.h
src/postprocessing/: ABLStatistics.cpp  ABLStatistics.h  CMakeLists.txt  PostProcessDriver.cpp  PostProcessDriver.h  PostProcessingTask.cpp  PostProcessingTask.h  nalu_postprocess.cpp
src/preprocessing/: ABLFields.cpp  ABLFields.h  BdyIOPlanes.cpp  BdyIOPlanes.h  CMakeLists.txt  ChannelFields.cpp  ChannelFields.h  HITFields.cpp  HITFields.h  InflowHistory.cpp  InflowHistory.h  NDTW2D.cpp  NDTW2D.h  NestedRefinement.cpp  NestedRefinement.h  PreProcessDriver.cpp  PreProcessDriver.h  PreProcessingTask.cpp  PreProcessingTask.h  README.md  RotateMesh.cpp  RotateMesh.h  SamplingPlanes.cpp  SamplingPlanes.h  TranslateMesh.cpp  TranslateMesh.h  nalu_preprocess.cpp
src/struct_grid/: CMakeLists.txt  FVStencil.h  HypreStructSolver.cpp  HypreStructSolver.h  NeighborMap.h  StructField.h  StructGrid.cpp  StructGrid.h  StructGridIx.h  StructGridUtils.h  test_struct.cpp
src/tools/: CMakeLists.txt
src/tools/boxturb/: BoxTurb.cpp  BoxTurb.h  BoxTurbIO.cpp  BoxTurbIO.h  CMakeLists.txt  boxturb_main.cpp
src/tools/turbsim_netcdf/: CMakeLists.txt  README.md  TurbulenceFile.cpp  TurbulenceFile.h  WindSimFile.cpp  WindSimFile.h  turbsim_netcdf.cpp
src/wrftonalu/: .gitignore  CMakeLists.txt  Makefile  README.md  module_constants.F90  module_dm.F90  module_exodus.F90  module_ncderrcheck.F90  module_str2int.F90  module_utmdeg_converter.F90  wrftonalu.F90
tests/: CMakeLists.txt
tests/grids/: channel_mesh.exo  grid.p3d
tests/mesh/: CMakeLists.txt  abl_mesh_bbox.yaml  abl_mesh_vertices.yaml  channel_mesh.yaml  plot3d_to_exo.yaml  slice_mesh.yaml  user_specified_spacing.yaml
tests/preprocessing/: CMakeLists.txt  bdy_io_mesh.yaml  channel_fields.yaml  generate_planes.yaml  init_abl_fields.yaml  move_mesh.yaml  percept_refine.yaml  rotate_mesh.yaml
